@@ -1,5 +1,8 @@
 package ca.ulaval.glo2003.repository;
 
+import static ca.ulaval.glo2003.util.Constante.RESERVATION_NOT_FOUND;
+import static ca.ulaval.glo2003.util.Constante.RESTAURANT_NOT_FOUND;
+
 import ca.ulaval.glo2003.entity.Owner;
 import ca.ulaval.glo2003.entity.Reservation;
 import ca.ulaval.glo2003.entity.Restaurant;
@@ -50,7 +53,7 @@ public class RestaurantRespository {
             .stream()
             .filter(restaurant -> restaurant.getId().equals(restaurantId))
             .findFirst()
-            .orElseThrow(() -> new NotFoundException("No restaurant found for the owner."));
+            .orElseThrow(() -> new NotFoundException(RESTAURANT_NOT_FOUND));
     return unRestaurant;
   }
 
@@ -59,7 +62,7 @@ public class RestaurantRespository {
         owners.stream().flatMap(owner -> owner.getRestaurants().stream()).toList().stream()
             .filter(restaurant -> restaurant.getId().equals(restaurantId))
             .findFirst()
-            .orElseThrow(() -> new NotFoundException("No restaurant found for the owner."));
+            .orElseThrow(() -> new NotFoundException(RESTAURANT_NOT_FOUND));
     return unRestaurant;
   }
 
@@ -78,17 +81,37 @@ public class RestaurantRespository {
     owners.stream().flatMap(owner -> owner.getRestaurants().stream()).toList().stream()
         .filter(restaurant -> restaurant.getId().equals(restaurantId))
         .findFirst()
-        .orElseThrow(() -> new NotFoundException("No restaurant found for the owner."))
+        .orElseThrow(() -> new NotFoundException(RESTAURANT_NOT_FOUND))
         .addReservation(reservation);
 
-    return getReservation(reservation.getId());
+    return getReservationByNumber(reservation.getNumber());
   }
 
-  public Reservation getReservation(String reservationId) throws NotFoundException {
-    return owners.stream().flatMap(owner -> owner.getRestaurants().stream()).toList().stream()
+
+  public Reservation getReservationByNumber(String reservationNumer) throws NotFoundException {
+    return owners.stream()
+        .flatMap(owner -> owner.getRestaurants().stream())
+        .collect(Collectors.toList())
+        .stream()
         .flatMap(restaurant -> restaurant.getReservationList().stream())
-        .filter(reservation -> reservation.getId().equals(reservationId))
+        .filter(reservation -> reservation.getNumber().equals(reservationNumer))
         .findFirst()
-        .orElseThrow(() -> new NotFoundException("reservation not found."));
+        .orElseThrow(() -> new NotFoundException(RESERVATION_NOT_FOUND));
+  }
+
+  public Restaurant getRestaurantByReservationNumber(String number) throws NotFoundException {
+
+    Restaurant unRestaurant =
+        owners.stream()
+            .flatMap(owner -> owner.getRestaurants().stream())
+            .collect(Collectors.toList())
+            .stream()
+            .filter(
+                restaurant ->
+                    restaurant.getReservationList().stream()
+                        .anyMatch(reservation -> reservation.getNumber().equals(number)))
+            .findFirst()
+            .orElseThrow(() -> new NotFoundException(RESTAURANT_NOT_FOUND));
+    return unRestaurant;
   }
 }
